[project]
name = "DiffusersServer"
version = "0.1.0"
description = "Nueva solución tipo Ollama pero para modelos de Text2Img"
authors = [
    { name = "Rivera.ai/Fredy Rivera", email = "riveraaai200678@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "Flask",
    "flask_cors",
    "waitress",
    "psutil",
    "diffusers",
    "torch"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["AISuperServer"]