[project]
name = "DiffusersServer"
version = "0.1.45"
description = "Nueva solución tipo Ollama pero para modelos de Text2Img"
authors = [
    { name = "Rivera.ai/Fredy Rivera", email = "riveraaai200678@gmail.com" }
]

readme = "README.md"

requires-python = ">=3.8"
dependencies = [
    "Flask",
    "flask_cors",
    "waitress",
    "psutil",
    "torch",
    "torchvision",
    "transformers==4.49.0",
    "sentencepiece",
    "fastapi",
    "uvicorn",
    "diffusers @ git+https://github.com/F4k3r22/diffusers-async.git@main"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["DiffusersServer"]